small spacing fix

--- a/frontend/src/app/routes/home/editor/editor.component.scss
+++ b/frontend/src/app/routes/home/editor/editor.component.scss
@@ -48,7 +48,7 @@
 .sticky {
   position: sticky;
   top: 4rem;
-  padding-bottom: 0.5rem;
+  padding-bottom: 0.375rem;
   border-bottom: 1px solid var(--color-border-grey);
   z-index: 2;
   overflow: hidden;
@@ -58,13 +58,13 @@
 .content-section {
   display: flex;
   flex-direction: column;
-  min-height: calc(100vh - 4.0625rem);
-  // container will be 100% of the viewport - 65 px header
+  min-height: calc(100vh - 3.8375rem);
+  // container will be 100% of the viewport -  header
 }
 
 .content {
   display: flex;
-  padding: 1rem;
+  padding: 1.25rem 1rem 1rem;
 
   justify-content: left;
 
